# BraniacLMS

./: .gitignore  README.md  pyproject.toml
authapp/: models.py  urls.py  views.py
authapp/migrations/: 0001_initial.py
authapp/templates/authapp/: base.html  login.html  register.html
authapp/templates/authapp/includes/: inc_messages.html
config/: settings.py  urls.py
mainapp/: context_processor.py  models.py  urls.py  views.py
mainapp/fixtures/: 002_courses.json
mainapp/fixtures/fixtures/: 002_courses.json
mainapp/management/commands/: fill.py  fill_courses.py  fill_lessons.py  fill_news.py  fill_teachers.py
mainapp/migrations/: 0001_initial.py
mainapp/seeding/: 0001_auto_name.py
mainapp/templates/mainapp/: base.html  contacts.html  courses_list.html  doc_site.html  index.html  login.html  news.html
mainapp/templates/mainapp/includes/: inc_main_menu.html
mainapp/templatetags/: mailto.py
templates/: base.html
templates/includes/: inc_main_menu.html
